<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_calendar"
        android:icon="@drawable/ic_calendar"
        android:title="Calendar" />
    <item
        android:id="@+id/nav_appointments"
        android:icon="@drawable/ic_clock"
        android:title="Appointments" />
    <item
        android:id="@+id/nav_book"
        android:icon="@drawable/ic_add_circle"
        android:title="Book" />
    <item
        android:id="@+id/nav_directions"
        android:icon="@drawable/ic_map"
        android:title="Directions" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_person"
        android:title="Profile" />
</menu>
